# MongoDB

./: .gitignore  LICENSE  README.md  demo.py  main.py  projectflow.txt  pyproject.toml  run_output.txt  setup.py
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/components/: model_evaluation.py  model_pusher.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/pipeline/: training_pipeline.py
src/pipline/: training_pipeline.py
